still on the issue of background-image not showing for safari

--- a/damoke.css
+++ b/damoke.css
@@ -110,14 +110,11 @@ header {
 }
 
 .services-container {
-    background: url(public/mock\ 2a.jpg);
+    background: url(public/mock\ 2.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    -o-background-attachement: fixed;
-    -moz-background-attachement: fixed;
-    -webkit-background-attachement: fixed;
 }
 
 .services {
